--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@whop/checkout": "^0.0.41",
+    "ag-charts-community": "^13.0.0",
+    "ag-charts-enterprise": "^13.0.0",
+    "ag-charts-react": "^13.0.0",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.25",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.344.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
@@ -30,6 +34,7 @@
     "react-router-dom": "^7.9.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
